added breathing exercise page link.

--- a/featuresPage/features.html
+++ b/featuresPage/features.html
@@ -74,8 +74,8 @@
           </article>
         </a>
         
-
-        <article
+        <a href="/Breathing_Excersise/Excersise.html">
+          <article
           class="bg-white rounded-xl p-6 shadow-md hover:shadow-xl transition-transform transform hover:-translate-y-1 duration-300 flex flex-col space-y-4 max-w-xs mx-auto">
           <div
             class="w-10 h-10 bg-blue-100 text-blue-600 rounded-md flex items-center justify-center text-lg transition-transform hover:scale-110">
@@ -86,6 +86,8 @@
             Guided breathing techniques to help manage anxiety and improve speech flow.
           </p>
         </article>
+      </a>
+        
 
         <article
           class="bg-white rounded-xl p-6 shadow-md hover:shadow-xl transition-transform transform hover:-translate-y-1 duration-300 flex flex-col space-y-4 max-w-xs mx-auto">
