--- a/HomePage/index.html
+++ b/HomePage/index.html
@@ -14,8 +14,9 @@
   <link rel="icon" href="assets/logo2.png" />
 
  </head>
- <body class="bg-[#e8f0fe]">
-  <header class="bg-sky-100 border-b border-gray-200 shadow-sm sticky top-0 z-30">
+ <body class="bg-[#f3f4f6]">
+  <header class="bg-gradient-to-r from-[#2563eb] via-[#38bdf8] to-[#1e40af] text-white border-b border-gray-200 shadow-sm sticky top-0 z-30">
+
    <nav class="max-w-7xl mx-auto px-6 sm:px-8 lg:px-12 flex items-center justify-between h-16">
     <a class="flex items-center space-x-2" href="#" aria-label="Fluent Speech Home">
      <div >
@@ -23,11 +24,11 @@
 
       </i>
      </div>
-     <span class="font-semibold text-gray-900 text-2xl select-none">
+     <span class="font-semibold text-white text-2xl select-none">
       Fluent Speech
      </span>
     </a>
-    <ul class="hidden md:flex space-x-8 text-gray-700 text-sm font-normal">
+    <ul class="hidden md:flex space-x-8 text-white text-sm font-normal">
      <li>
       <a class="hover:text-gray-900" href="/featuresPage/features.html" tabindex="0">
        Features
@@ -49,13 +50,14 @@
       </a>
      </li>
     </ul>
-    <div class="hidden md:flex items-center space-x-4 text-sm font-normal text-gray-700">
+    <div class="hidden md:flex items-center space-x-4 text-sm font-normal text-white">
      <a class="hover:text-gray-900 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-[#2563eb]" href="/loginPage/login.html" tabindex="0">
       Login
      </a>
-     <a class="bg-[#2563eb] btn-shadow hover:bg-[#1e40af] text-white px-4 py-2 rounded text-sm font-semibold transition focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-white" href="/community/joinCommunity.html" tabindex="0">
+     <a class="bg-[#10b981] hover:bg-[#059669] text-white px-6 py-3 rounded-lg text-base font-semibold transition transform hover:-translate-y-0.5 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-white" href="/community/joinCommunity.html">
       Join Community Now!
-     </a>
+    </a>
+    
     </div>
    </nav>
   </header>
@@ -83,7 +85,7 @@
    </section>
   </main>
   <!-- Footer -->
-  <footer class="bg-sky-100 text-gray-700 py-6 mt-12 border-t border-sky-200">
+  <footer class="bg-gradient-to-r from-[#2563eb] via-[#38bdf8] to-[#1e40af] text-white py-6 mt-12 border-t border-sky-200">
     <div class="max-w-7xl mx-auto px-4 flex flex-col md:flex-row justify-between items-center">
       <div class="text-sm text-center md:text-left">
         &copy; 2025 Fluent Speech. All rights reserved.
