removed firebase authentication changes for further devlopment of code later

--- a/loginPage/login.html
+++ b/loginPage/login.html
@@ -43,7 +43,7 @@
                 <!-- Social media icons -->
                 <div class="social-icons">
                     <a href="#" class="icon" data-tooltip="Google"title="Sign up with Google"><i class="fa-brands fa-google-plus-g"></i></a>
-                    <a href="#" class="icon" data-tooltip="Facebook"itle="Sign up with Facebook"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="#" class="icon" data-tooltip="Facebook"title="Sign up with Facebook"><i class="fa-brands fa-facebook-f"></i></a>
                     <a href="#" class="icon" data-tooltip="Github"title="Sign up with GitHub"><i class="fa-brands fa-github"></i></a>
                     <a href="#" class="icon" data-tooltip="LinkedIn"title="Sign up with LinkedIn"><i class="fa-brands fa-linkedin-in"></i></a>
                 </div>
@@ -64,7 +64,7 @@
         <h2>Forgot Your Password?</h2>
         <p>Please enter your email address to receive a password reset link.</p>
         <input type="email" placeholder="Enter your email">
-        <button typr="button">Reset Password</button>
+        <button type="button">Reset Password</button>
     </div>
 </div>
 
@@ -83,9 +83,8 @@
                 </div>
             </div>
         </div>
-    </div>
-
-    <script src="login.js"></script>
+    </div> 
+<script src="login.js"></script>
 </body>
 
 </html>
