edited featurespage features.html to add a link to the realtime speech analysis page

--- a/featuresPage/features.html
+++ b/featuresPage/features.html
@@ -48,6 +48,7 @@
     <main>
       <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8 mb-12">
         <!-- Card Template -->
+         <a href="/realtime speech analysis/Rts_Annalysis.html">
         <article
           class="bg-white rounded-xl p-6 shadow-md hover:shadow-xl transition-transform transform hover:-translate-y-1 duration-300 flex flex-col space-y-4 max-w-xs mx-auto">
           <div
@@ -59,6 +60,7 @@
             Advanced speech recognition technology provides instant feedback on your speech patterns.
           </p>
         </article>
+        </a>
 
         <a href="/Coach_consultation/Coach_Menu.html" class="block">
           <article
