commited changes in Excersise.html,Coach_Menu.html, and /contact.html regarding the footer and header styles

--- a/Breathing_Excersise/Excersise.html
+++ b/Breathing_Excersise/Excersise.html
@@ -42,8 +42,8 @@
 
   </style>
  </head>
- <body class="bg-gray-50 text-gray-800 min-h-screen flex flex-col">
-  <header class="bg-blue-600 text-white shadow-md">
+ <body class="bg-[#f3f4f6] text-white min-h-screen flex flex-col">
+  <header class="bg-gradient-to-r from-[#2563eb] via-[#38bdf8] to-[#1e40af]">
    <div class="container mx-auto px-6 py-4 flex items-center justify-between">
     <h1 class="text-2xl font-bold flex items-center space-x-3">
         <img src="/assets/logo3.svg" alt="Logo" class="w-10 h-10 object-contain" />
@@ -195,7 +195,7 @@
       
    </section>
   </main>
-  <footer class="bg-blue-600 text-white py-6 mt-20">
+  <footer class="bg-gradient-to-r from-[#2563eb] via-[#38bdf8] to-[#1e40af] text-white py-6 mt-12 border-t border-sky-200">
    <div class="container mx-auto px-6 text-center text-sm">
     <p>
      © 2024 Fluent Speech. All rights reserved.
