--- a/Coach_consultation/Coach_Menu.html
+++ b/Coach_consultation/Coach_Menu.html
@@ -42,8 +42,8 @@
    }
   </style>
  </head>
- <body class="bg-gray-100 min-h-screen flex flex-col">
-  <header class="bg-gradient-to-r from-blue-500 via-blue-600 to-blue-800 text-white border-b border-gray-200 shadow-md sticky top-0 z-30">
+ <body class="bg-[#f3f4f6] min-h-screen flex flex-col">
+  <header class="bg-gradient-to-r from-[#2563eb] via-[#38bdf8] to-[#1e40af] text-white border-b border-gray-200 shadow-md sticky top-0 z-30">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
        <div class="flex justify-between items-center py-4">
           <a class="flex items-center space-x-2 text-2xl font-bold text-white" href="#" aria-label="Go to homepage">
@@ -274,28 +274,48 @@
     </article>
    </section>
   </main>
-  <footer class="bg-blue-900 text-white py-4 mt-">
-    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-       <div class="flex flex-col sm:flex-row justify-between items-center">
-          <div class="text-center sm:text-left">
-             <a class="text-2xl font-bold" href="#">
-                <img src="/HomePage/assets/logo3.svg" alt="Fluent Speech Logo" class="h-10 w-10 object-contain mb-2" />
-                <span>Fluent Speech</span>
-             </a>
-             <p class="mt-4">Providing expert speech therapy for all ages. Let’s help you speak with confidence!</p>
-          </div>
-          <div class="mt-6 sm:mt-0 flex justify-center sm:justify-end space-x-8">
-             <a href="/HomePage/index.html" class="text-indigo-300 hover:text-indigo-400">Home</a>
-             <a href="/aboutUS/AboutUs.html" class="text-indigo-300 hover:text-indigo-400">About</a>
-             <a href="/Coach_consultation/consultation_Page.html" class="text-indigo-300 hover:text-indigo-400">Consultation</a>
-             <a href="/contact us/contact.html" class="text-indigo-300 hover:text-indigo-400">Contact</a>
-          </div>
-       </div>
-       <div class="mt-6 text-center text-gray-400">
-          <p>&copy; 2025 Fluent Speech. All rights reserved.</p>
-       </div>
+  <footer class="bg-gradient-to-r from-[#2563eb] via-[#38bdf8] to-[#1e40af] text-white border-t border-gray-200 shadow-sm ">
+   <div
+    class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4 flex flex-col md:flex-row justify-between items-center text-white text-sm"
+   >
+    <p>© 2024 Fluent Speech. All rights reserved.</p>
+    <div class="flex space-x-6 mt-4 md:mt-0">
+     <a
+      aria-label="Facebook"
+      class="social-icon hover:text-blue-600 focus:text-blue-600 focus:outline-none"
+      href="#"
+      tabindex="0"
+     >
+      <i class="fab fa-facebook-f fa-lg"></i>
+     </a>
+     <a
+      aria-label="Twitter"
+      class="social-icon hover:text-blue-600 focus:text-blue-600 focus:outline-none"
+      href="#"
+      tabindex="0"
+     >
+      <i class="fab fa-twitter fa-lg"></i>
+     </a>
+     <a
+      aria-label="Instagram"
+      class="social-icon hover:text-blue-600 focus:text-blue-600 focus:outline-none"
+      href="#"
+      tabindex="0"
+     >
+      <i class="fab fa-instagram fa-lg"></i>
+     </a>
+     <a
+      aria-label="LinkedIn"
+      class="social-icon hover:text-blue-600 focus:text-blue-600 focus:outline-none"
+      href="https://www.linkedin.com/in/nihal-malviya/"
+      tabindex="0"
+     >
+      <i class="fab fa-linkedin-in fa-lg"></i>
+     </a>
     </div>
- </footer>
+   </div>
+  </footer>
+
  
 
   <!-- Modal -->
