--- a/CoursesPage/course.html
+++ b/CoursesPage/course.html
@@ -18,10 +18,10 @@
     </style>
 </head>
 
-<body class="bg-gray-50 min-h-screen flex flex-col">
-    <header class="bg-white shadow-md sticky top-0 z-50">
+<body class="bg-[#f3f4f6] min-h-screen flex flex-col">
+    <header class="bg-gradient-to-r from-[#2563eb] via-[#38bdf8] to-[#1e40af] text-white border-b border-gray-200 shadow-md sticky top-0 z-30">
         <div class="container mx-auto px-6 py-4 flex items-center justify-between">
-            <a class="text-2xl font-bold text-indigo-600 flex items-center space-x-2" href="#">
+            <a class="text-2xl font-bold text-white  flex items-center space-x-2" href="#">
                 <img alt="Fluent Speech logo, stylized FS letters in indigo color" class="w-10 h-10" height="40"
                     src="/featuresPage/assets/logo3.svg"
                     width="40" />
@@ -29,15 +29,15 @@
                     Fluent Speech
                 </span>
             </a>
-            <nav class="hidden md:flex space-x-8 text-gray-700 font-semibold">
-                <a class="hover:text-indigo-600 transition" href="/HomePage/index.html">
+            <nav class="hidden md:flex space-x-8 text-whitefont-semibold">
+                <a class="transition" href="/HomePage/index.html">
                     Home
                 </a>
            
-                <a class="hover:text-indigo-600 transition" href="/aboutUS/AboutUs.html">
+                <a class=" transition" href="/aboutUS/AboutUs.html">
                     About
                 </a>
-                <a class="hover:text-indigo-600 transition" href="/contact us/contact.html">
+                <a class=" transition" href="/contact us/contact.html">
                     Contact
                 </a>
             </nav>
@@ -303,32 +303,47 @@ id="course-modal" role="dialog" aria-modal="true" aria-labelledby="modal-title" 
 </div>
 </div>
 
-<footer class="bg-white border-t border-gray-200 mt-16">
-<div
-    class="container mx-auto px-6 py-8 flex flex-col md:flex-row justify-between items-center text-gray-600 text-sm">
-    <p>
-        © 2024 Fluent Speech. All rights reserved.
-    </p>
+<footer class="bg-gradient-to-r from-[#2563eb] via-[#38bdf8] to-[#1e40af] text-white border-t border-gray-200 shadow-sm ">
+   <div
+    class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4 flex flex-col md:flex-row justify-between items-center text-white text-sm"
+   >
+    <p>© 2024 Fluent Speech. All rights reserved.</p>
     <div class="flex space-x-6 mt-4 md:mt-0">
-        <a aria-label="Facebook" class="hover:text-indigo-600 transition" href="#">
-            <i class="fab fa-facebook-f fa-lg">
-            </i>
-        </a>
-        <a aria-label="Twitter" class="hover:text-indigo-600 transition" href="#">
-            <i class="fab fa-twitter fa-lg">
-            </i>
-        </a>
-        <a aria-label="Instagram" class="hover:text-indigo-600 transition" href="#">
-            <i class="fab fa-instagram fa-lg">
-            </i>
-        </a>
-        <a aria-label="LinkedIn" class="hover:text-indigo-600 transition" href="#">
-            <i class="fab fa-linkedin-in fa-lg">
-            </i>
-        </a>
+     <a
+      aria-label="Facebook"
+      class="social-icon hover:text-blue-600 focus:text-blue-600 focus:outline-none"
+      href="#"
+      tabindex="0"
+     >
+      <i class="fab fa-facebook-f fa-lg"></i>
+     </a>
+     <a
+      aria-label="Twitter"
+      class="social-icon hover:text-blue-600 focus:text-blue-600 focus:outline-none"
+      href="#"
+      tabindex="0"
+     >
+      <i class="fab fa-twitter fa-lg"></i>
+     </a>
+     <a
+      aria-label="Instagram"
+      class="social-icon hover:text-blue-600 focus:text-blue-600 focus:outline-none"
+      href="#"
+      tabindex="0"
+     >
+      <i class="fab fa-instagram fa-lg"></i>
+     </a>
+     <a
+      aria-label="LinkedIn"
+      class="social-icon hover:text-blue-600 focus:text-blue-600 focus:outline-none"
+      href="https://www.linkedin.com/in/nihal-malviya/"
+      tabindex="0"
+     >
+      <i class="fab fa-linkedin-in fa-lg"></i>
+     </a>
     </div>
-</div>
-</footer>
+   </div>
+  </footer>
 <script src="course.js"></script>
 </body>
 
