commited changes in/consultation_Page.html

--- a/Coach_consultation/consultation_Page.html
+++ b/Coach_consultation/consultation_Page.html
@@ -16,27 +16,27 @@
     }
   </style>
  </head>
- <body class="bg-gray-50 min-h-screen flex flex-col">
+ <body class="bg-[#f3f4f6] min-h-screen flex flex-col">
   <!-- Header -->
-  <header class="bg-white shadow">
+  <header class="bg-gradient-to-r from-[#2563eb] via-[#38bdf8] to-[#1e40af] text-white border-b border-gray-200 shadow-md sticky top-0 z-30">
    <div class="container mx-auto px-6 py-4 flex items-center justify-between">
     <a class="flex items-center space-x-3" href="#">
      <img alt="Fluent Speech logo, stylized FS letters in blue and white" class="w-12 h-12" height="48" src="/HomePage/assets/logo3.svg" width="48"/>
-     <span class="text-2xl font-semibold text-blue-600">
+     <span class="text-2xl font-semibold text-white">
       Fluent Speech
      </span>
     </a>
     <nav class="hidden md:flex space-x-8 text-gray-700 font-medium">
-     <a class="hover:text-blue-600 transition" href="/HomePage/index.html">
+     <a class="hover:text-white transition" href="/HomePage/index.html">
       Home
      </a>
-     <a class="hover:text-blue-600 transition" href="/aboutUS/AboutUs.html">
+     <a class="hover:text-white transition" href="/aboutUS/AboutUs.html">
       About
      </a>
-     <a class="hover:text-blue-600 transition" href="/featuresPage/features.html">
+     <a class="hover:text-white transition" href="/featuresPage/features.html">
       Services
      </a>
-     <a class="hover:text-blue-600 transition" href="/contact us/contact.html">
+     <a class="hover:text-white transition" href="/contact us/contact.html">
       Contact
      </a>
     </nav>
@@ -228,27 +228,43 @@
     </div>
    </section>
   </main>
-  <footer class="bg-white border-t border-gray-200 mt-16">
-   <div class="container mx-auto px-6 py-8 flex flex-col md:flex-row justify-between items-center text-gray-600 text-sm">
-    <p>
-     © 2024 Fluent Speech. All rights reserved.
-    </p>
+  <footer class="bg-gradient-to-r from-[#2563eb] via-[#38bdf8] to-[#1e40af] text-white border-t border-gray-200 shadow-sm ">
+   <div
+    class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4 flex flex-col md:flex-row justify-between items-center text-white text-sm"
+   >
+    <p>© 2024 Fluent Speech. All rights reserved.</p>
     <div class="flex space-x-6 mt-4 md:mt-0">
-     <a aria-label="Facebook" class="hover:text-blue-600" href="#" target="_blank" rel="noopener noreferrer">
-      <i class="fab fa-facebook fa-lg">
-      </i>
+     <a
+      aria-label="Facebook"
+      class="social-icon hover:text-blue-600 focus:text-blue-600 focus:outline-none"
+      href="#"
+      tabindex="0"
+     >
+      <i class="fab fa-facebook-f fa-lg"></i>
      </a>
-     <a aria-label="Twitter" class="hover:text-blue-600" href="#" target="_blank" rel="noopener noreferrer">
-      <i class="fab fa-twitter fa-lg">
-      </i>
+     <a
+      aria-label="Twitter"
+      class="social-icon hover:text-blue-600 focus:text-blue-600 focus:outline-none"
+      href="#"
+      tabindex="0"
+     >
+      <i class="fab fa-twitter fa-lg"></i>
      </a>
-     <a aria-label="Instagram" class="hover:text-blue-600" href="#" target="_blank" rel="noopener noreferrer">
-      <i class="fab fa-instagram fa-lg">
-      </i>
+     <a
+      aria-label="Instagram"
+      class="social-icon hover:text-blue-600 focus:text-blue-600 focus:outline-none"
+      href="#"
+      tabindex="0"
+     >
+      <i class="fab fa-instagram fa-lg"></i>
      </a>
-     <a aria-label="LinkedIn" class="hover:text-blue-600" href="#" target="_blank" rel="noopener noreferrer">
-      <i class="fab fa-linkedin fa-lg">
-      </i>
+     <a
+      aria-label="LinkedIn"
+      class="social-icon hover:text-blue-600 focus:text-blue-600 focus:outline-none"
+      href="https://www.linkedin.com/in/nihal-malviya/"
+      tabindex="0"
+     >
+      <i class="fab fa-linkedin-in fa-lg"></i>
      </a>
     </div>
    </div>
