--- a/Coach_consultation/consultation_Page.html
+++ b/Coach_consultation/consultation_Page.html
@@ -26,7 +26,7 @@
       Fluent Speech
      </span>
     </a>
-    <nav class="hidden md:flex space-x-8 text-gray-700 font-medium">
+    <nav class="hidden md:flex space-x-8 text-white font-medium">
      <a class="hover:text-white transition" href="/HomePage/index.html">
       Home
      </a>
@@ -47,16 +47,16 @@
    </div>
    <!-- Mobile menu -->
    <nav aria-label="Mobile menu" class="hidden md:hidden bg-white border-t border-gray-200" id="mobile-menu">
-    <a class="block px-6 py-3 text-gray-700 font-medium hover:bg-blue-50 hover:text-blue-600" href="/HomePage/index.html">
+    <a class="block px-6 py-3 text-white font-medium " href="/HomePage/index.html">
      Home
     </a>
-    <a class="block px-6 py-3 text-gray-700 font-medium hover:bg-blue-50 hover:text-blue-600" href="/aboutUS/AboutUs.html">
+    <a class="block px-6 py-3 text-white font-medium " href="/aboutUS/AboutUs.html">
      About
     </a>
-    <a class="block px-6 py-3 text-gray-700 font-medium hover:bg-blue-50 hover:text-blue-600" href="/featuresPage/features.html">
+    <a class="block px-6 py-3 text-white font-medium " href="/featuresPage/features.html">
      Services
     </a>
-    <a class="block px-6 py-3 text-gray-700 font-medium hover:bg-blue-50 hover:text-blue-600" href="/contact us/contact.html">
+    <a class="block px-6 py-3 text-white font-medium " href="/contact us/contact.html">
      Contact
     </a>
    </nav>
