added course article to features page

--- a/featuresPage/features.html
+++ b/featuresPage/features.html
@@ -120,7 +120,7 @@
                         <p class="text-gray-600 text-sm leading-relaxed">
                             Schedule personalized sessions with professional speech coaches for targeted improvement.
                         </p>
-                       
+
                     </article>
                 </a>
 
@@ -136,9 +136,27 @@
                         <p class="text-gray-600 text-sm leading-relaxed">
                             Boost articulation and fluency with fun, challenging tongue twisters curated by experts.
                         </p>
-                        
+
                     </article>
                 </a>
+                <!-- Card 7 (Centered Below) -->
+                <div class="col-span-1 col-start-2">
+                    <a href="/CoursesPage/course.html">
+                        <article
+                            class="bg-white rounded-xl p-6 shadow-md hover:shadow-xl transition-transform transform hover:-translate-y-1 duration-300 flex flex-col space-y-4">
+                            <div
+                                class="w-10 h-10 bg-blue-100 text-blue-600 rounded-md flex items-center justify-center text-lg hover:scale-110 transition-transform">
+                                <i class="fas fa-graduation-cap"></i>
+                            </div>
+                            <h2 class="font-semibold text-base text-black">Courses</h2>
+                            <p class="text-gray-600 text-sm leading-relaxed">
+                                Course on speech enhancement techniques, covering everything from basics to advanced
+                                strategies.
+                            </p>
+                        </article>
+                    </a>
+                </div>
+
             </div>
 
         </main>
