added a sentiment analysis block

--- a/realtime speech analysis/Rts_Annalysis.html
+++ b/realtime speech analysis/Rts_Annalysis.html
@@ -177,14 +177,20 @@
                 <h3 class="font-bold text-lg text-yellow-600 mb-2">Enthusiasm</h3>
                 <p class="text-gray-700" id="enthusiasm-text">Waiting...</p>
             </div>
+            <div id="sentiment-card" class="p-4 bg-white rounded-xl shadow hover:shadow-lg transition md:col-span-2">
+               <h3 class="font-bold text-lg text-orange-600 mb-2">Sentiment Analysis</h3>
+               <p class="text-gray-700" id="sentiment-text">Waiting...</p>
+            </div>
             <div id="suggestions-card" class="p-4 bg-white rounded-xl shadow hover:shadow-lg transition md:col-span-2">
                 <h3 class="font-bold text-lg text-green-600 mb-2">Suggestions for Improvement</h3>
                 <p class="text-gray-700" id="suggestions-text">Waiting...</p>
             </div>
+
             <div id="score-card" class="p-6 bg-blue-100 rounded-2xl text-center md:col-span-2 shadow-inner">
                 <h3 class="font-bold text-2xl text-blue-700">Overall Score</h3>
                 <p id="score-text" class="text-4xl text-blue-900 font-extrabold mt-2">- /10</p>
             </div>
+            
         </div>
         
         <!-- Loading and retry -->
